# Compresor

./: .gitignore  CMakeLists.txt  README.md  notasMiAbstraccion.txt
cli/: CMakeLists.txt
cli/include/: FileHandler.hpp
cli/src/: FileHandler.cpp  main.cpp
core/: CMakeLists.txt
core/include/: BitBuffer.hpp  Huffman.hpp  ICompressor.hpp  RLE.hpp
core/src/: BitBuffer.cpp  Huffman.cpp  RLE.cpp
